# brainsets

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  Snakefile  pyproject.toml  setup.py
.github/workflows/: dandi_testing.yml  testing.yml
brainsets/: __init__.py  cli.py  core.py  dandi_utils.py  descriptions.py
brainsets/allen_brain_observatory_calcium/: Snakefile  prepare_data.py
brainsets/allen_natural_movie_calcium/: prepare_data.py
brainsets/allen_visual_behavior_neuropixels/: Snakefile  prepare_data.py
brainsets/bouchard_chang/: Snakefile  prepare_data.py
brainsets/churchland_shenoy_neural_2012/: prepare_data.py
brainsets/evenchen_shenoy_structure_2019/: Snakefile  prepare_data.py
brainsets/flint_slutzky_accurate_2012/: prepare_data.py
brainsets/gillon_richards_responses_2023/: prepare_data.py
brainsets/mc_maze_small/: Snakefile  prepare_data.py
brainsets/odoherty_sabes_nonhuman_2017/: Snakefile  prepare_data.py
brainsets/orsborn_lab_ecog_reaching_2024/: prepare_data.py
brainsets/perich_miller_population_2018/: Snakefile  prepare_data.py
brainsets/processing/: __init__.py  signal.py
brainsets/taxonomy/: __init__.py  allen.py  descriptors.py  drifting_gratings.py  homosapiens.py  macaque.py  mice.py  multitask_readout.py  recording_tech.py  subject.py  task.py
brainsets_pipelines/: Snakefile
brainsets_utils/: __init__.py  dandi_utils.py  dataset_builder.py
data/: README.md
pipelines/: freeze.smk
scripts/: calculate_num_tokens.py
tests/: test_enum_unique.py  test_session_context_manager.py  test_signal.py
(+213 files in other folders)
